Fix stretch slider images CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,11 @@ body {
 	font-size: 26px;
 }
 
+.carousel-inner img {
+	max-width: 100%;
+	height: auto;
+}
+
 .nav ul {
 	display: flex;
 	list-style-type: none;
@@ -79,6 +84,7 @@ body {
 	margin-bottom: 60px;
 	font-size: 30px;
 }
+
 .about-me__introduction {
 	font-family: 'Spectral';
 	font-weight: 800;
